--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,2 +1,12 @@
 @use "../styles/mixin" as *;
 @use "../styles/variables" as *;
+
+html{
+    box-sizing: border-box;
+}
+
+*, *::before, *::after{
+    padding: 0;
+    margin: 0;
+    box-sizing: inherit;
+}
