partial; on header

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,3 +10,21 @@ html{
     margin: 0;
     box-sizing: inherit;
 }
+
+.content{
+    width: 100%;
+}
+
+button{
+    background-color: inherit;
+    border: none;
+}
+
+a{
+    text-decoration: none;
+    font-size: 0;
+}
+
+body{
+    background-color: black;
+}
