--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -25,6 +25,10 @@ a{
     font-size: 0;
 }
 
-body{
-    background-color: black;
+ul{
+    list-style: none;
+}
+
+img{
+    max-inline-size: 100%;
 }
