--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,6 +3,11 @@
 
 html{
     box-sizing: border-box;
+    height: 100%;
+}
+
+body{
+    min-height: 100%;
 }
 
 *, *::before, *::after{
@@ -12,7 +17,8 @@ html{
 }
 
 .content{
-    width: 100%;
+    width: 20.4375rem;
+    margin: auto;
 }
 
 button{
