--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -67,8 +67,22 @@
     letter-spacing: 0.929px;
 }
 
-@mixin body{
+@mixin body-01{
     font-size: 0.9375rem;
     font-weight: 400;
     line-height: 1.66667;
+}
+
+@mixin body_02{
+    font-size: 0.9375rem;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1.071px;
+}
+
+@mixin body_03{
+    font-size: 0.9375rem;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1px;
 }
