--- a/src/ui/footer/footer.module.scss
+++ b/src/ui/footer/footer.module.scss
@@ -5,19 +5,36 @@
     background-color: $black-01;
 
     &__block{
+        display: block;
         width: 6.3125rem;
         height: 0.25rem;
         background-color: $peach-00;
         margin: auto;
+
+        @include tablet{
+            margin-left: 0;
+        }
     }
 
     &__content{
         padding: 3rem 0 2.375rem;
         color: $white-00;
+
+        @include tablet{
+            display: flex;
+            flex-wrap: wrap;
+            padding: 3.5rem 0 2.875rem;
+            align-items: flex-end;
+            justify-content: space-between;
+        }
     }
 
     &__logo{
         margin: auto;
+
+        @include tablet{
+            width: 100%;
+        }
     }
 
     &__links{
@@ -25,6 +42,12 @@
         display: flex;
         flex-direction: column;
         row-gap: 1rem;
+
+        @include tablet{
+            margin-top: 2rem;
+            flex-direction: row;
+            column-gap: 2.125rem;
+        }
     }
 
     &__link{
@@ -38,6 +61,15 @@
         text-align: center;
         opacity: 0.5;
         margin-top: 3rem;
+
+        @include tablet{
+            text-align: left;
+            margin-top: 2rem;
+
+            &:last-of-type{
+                margin-top: 5rem;
+            }
+        }
     }
 }
 
