fix width of content on all queries

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -31,7 +31,8 @@ body{
         margin: auto;
 
         @include tablet{
-            width: 43.0625rem;
+            width: 90%;
+            max-width: 69.375rem;
         }
     }
 }
