--- a/src/ui/footer/footer.module.scss
+++ b/src/ui/footer/footer.module.scss
@@ -26,6 +26,7 @@
             padding: 3.5rem 0 2.875rem;
             align-items: flex-end;
             justify-content: space-between;
+            position: relative;
         }
 
         @include mid-tablet{
@@ -41,6 +42,10 @@
         @include tablet{
             width: 100%;
         }
+        
+        @include mid-tablet{
+            width: 50%;
+        }
     }
 
     &__links{
@@ -53,6 +58,12 @@
             margin-top: 2rem;
             flex-direction: row;
             column-gap: 2.125rem;
+        }
+
+        @include mid-tablet{
+            width: 50%;
+            margin: 0 0 0 auto;
+            justify-content: flex-end;
         }
     }
 
@@ -71,9 +82,18 @@
         @include tablet{
             text-align: left;
             margin-top: 2rem;
+            width: 43.0625rem;
 
             &:last-of-type{
                 margin-top: 5rem;
+                width: 100%;
+            }
+        }
+
+        @include mid-tablet{
+
+            &:last-of-type{
+                margin-top: 3.5rem;
             }
         }
     }
@@ -85,4 +105,15 @@
     column-gap: 1rem;
     margin-top: 3rem;
     align-items: center;
+
+    @include tablet{
+        position: absolute;
+        bottom: 2.875rem;
+        margin-top: 0;
+        right: 0;
+    }
+
+    @include mid-tablet{
+        bottom: 8.5rem;
+    }
 }
