move nav links to a component for reusability and finish desing of footer and header on all queries

--- a/src/ui/header/header.module.scss
+++ b/src/ui/header/header.module.scss
@@ -35,3 +35,18 @@
         }
     }
 }
+
+.header{
+
+    .header{
+        &__links{
+            display: none;
+
+            @include mid-tablet{
+                display: flex;
+                margin: 0;
+                width: fit-content;
+            }
+        }
+    }
+}
