--- a/src/ui/hook/hook.module.scss
+++ b/src/ui/hook/hook.module.scss
@@ -7,11 +7,71 @@
     @include tablet{
         width: 43.0625rem;
     }
+
+    @include mid-tablet{
+        width: 69.375rem;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__last{
+        margin-top: 2.5rem;
+
+        @include tablet{
+            margin: 3.9375rem auto 0;
+        }
+
+        @include mid-tablet{
+            margin: 0;
+            width: 27.8125rem;
+        }
+    }
     
     &__image{
         border-radius: 0.5rem;
         width: 100%;
         height: 300px;
+
+        @include mid-tablet{
+            width: 33.75rem;
+            height: 36.75rem;
+        }
+
+        &--mobile{
+            
+            @include tablet{
+                display: none;
+            }
+
+            @include mid-tablet{
+                display: none;
+            }
+        }
+
+        &--tablet{
+            display: none;
+            
+            @include tablet{
+                display: unset;
+            }
+
+            @include mid-tablet{
+                display: none;
+            }
+        }
+
+        &--desktop{
+            display: none;
+            
+            @include tablet{
+                display: none;
+            }
+
+            @include mid-tablet{
+                display: unset;
+                order: 1;
+            }
+        }
     }
 
     &__heading{
@@ -19,7 +79,7 @@
         letter-spacing: 1px;
         text-transform: uppercase;
         text-align: center;
-        margin-top: 2.5rem;
+        margin: auto;
 
         &--peach{
             color: $peach-00;
@@ -27,7 +87,13 @@
 
         @include tablet{
             width: 35.8125rem;
-            margin: 3.9375rem auto 0;
+        }
+
+        @include mid-tablet{
+            @include heading-02;
+            margin: 9.1875rem 0 0;
+            width: 100%;
+            text-align: left;
         }
     }
 
@@ -40,6 +106,12 @@
         @include tablet{
             width: 35.8125rem;
             margin: 2rem auto 0;
+        }
+
+        @include mid-tablet{
+            margin-left: 0;
+            width: 100%;
+            text-align: left;
         }
     }
 }
