--- a/src/ui/hook/hook.module.scss
+++ b/src/ui/hook/hook.module.scss
@@ -34,6 +34,7 @@
         @include mid-tablet{
             width: 33.75rem;
             height: 36.75rem;
+            order: 1;
         }
 
         &--mobile{
