--- a/src/ui/hook/hook.module.scss
+++ b/src/ui/hook/hook.module.scss
@@ -30,6 +30,7 @@
         border-radius: 0.5rem;
         width: 100%;
         height: 300px;
+        display: block;
 
         @include mid-tablet{
             width: 33.75rem;
