--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,5 +6,53 @@
 }
 
 .hero{
-    padding: 6.75rem 0 7rem;
+    position: relative;
+    height: fit-content;
+    background-color: $black-03;
+
+    &__left{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+
+    }
+
+    &__right{
+        max-width:  23.4375rem;
+        top: 0;
+        object-fit: cover;
+        margin: auto;
+    }
+
+    &__new{
+        @include overline;
+        color: $white-00;
+        opacity: 0.5;
+        width: fit-content;
+        margin: 6.75rem auto 0;
+    }
+
+    &__heading{
+        width: 20.4375rem;
+        margin: 1rem auto 0;
+        font-size: 2.25rem;
+        font-weight: 700;
+        line-height: 1.11111;
+        letter-spacing: 1.286px;
+        text-align: center;
+        color: $white-00;
+    }
+
+    &__description{
+        @include body-01;
+        margin: 1.5rem auto 0;
+        width: 20.4375rem;
+        text-align: center;
+        color: $white-00;
+        opacity: 0.75;
+    }
+
+    &__link{
+        margin: 2.75rem auto 0;
+    }
 }
