--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -14,7 +14,6 @@
         position: absolute;
         width: 100%;
         height: 100%;
-
     }
 
     &__right{
@@ -22,6 +21,12 @@
         top: 0;
         object-fit: cover;
         margin: auto;
+
+        @include tablet{
+            max-width: unset;
+            width: 48rem;
+            height: 40rem;
+        }
     }
 
     &__new{
@@ -30,6 +35,10 @@
         opacity: 0.5;
         width: fit-content;
         margin: 6.75rem auto 0;
+
+        @include tablet{
+            margin-top: 7.875rem;
+        }
     }
 
     &__heading{
@@ -41,6 +50,12 @@
         letter-spacing: 1.286px;
         text-align: center;
         color: $white-00;
+
+        @include tablet{
+            @include heading-01;
+            margin-top: 1.5rem;
+            width: 25rem;
+        }
     }
 
     &__description{
