--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -27,6 +27,11 @@
             width: 48rem;
             height: 40rem;
         }
+
+        @include desktop{
+            width: 90rem;
+            height: 39.5rem;
+        }
     }
 
     &__new{
@@ -38,6 +43,11 @@
 
         @include tablet{
             margin-top: 7.875rem;
+        }
+
+        @include desktop{
+            width: 69.375rem;
+            margin: 8rem auto 0;
         }
     }
 
@@ -56,6 +66,20 @@
             margin-top: 1.5rem;
             width: 25rem;
         }
+
+        @include desktop{
+            width: 69.375rem;
+            margin: 1.5rem auto 0;
+        }
+
+        &--double{
+
+            @include desktop{
+                display: block;
+                width: 25rem;
+                text-align: left;
+            }
+        }
     }
 
     &__description{
@@ -65,9 +89,28 @@
         text-align: center;
         color: $white-00;
         opacity: 0.75;
+
+        @include desktop{
+            width: 69.375rem;
+            margin: 1.5rem auto 0;
+        }
+
+        &--double{
+
+            @include desktop{
+                display: block;
+                width: 21.875rem;
+                text-align: left;
+            }
+        }
     }
 
     &__link{
+        width: fit-content;
         margin: 2.75rem auto 0;
+
+        @include desktop{
+            width: 69.375rem;
+        }
     }
 }
