add hover effects on link

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -76,5 +76,9 @@ button{
     
     &--peach{
         background-color: $peach-00;
+
+        &:hover{
+            background-color: $peach-01;
+        }
     }
 }
