finish design of zx9 on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -81,4 +81,8 @@ button{
             background-color: $peach-01;
         }
     }
+
+    &--black{
+        background-color: $black-00;
+    }
 }
