--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,7 +3,6 @@
 
 .home{
     padding-bottom: 7.5rem;
-    overflow-x: hidden;
 
     &__subnav{
         margin-top: 9.25rem;
@@ -121,11 +120,13 @@
 }
 
 .zx9{
-    position: relative;
     background-color: $peach-00;
-    width: 20.4375rem;
     margin: 7.5rem auto 0;
     border-radius: 0.5rem;
+
+    @include mid-tablet{
+        display: flex;
+    }
 
     &__picture{
         background-image: url("../../public/images/home/pattern-circles.svg");
@@ -133,17 +134,50 @@
         padding: 3.4375rem 0 10.9375rem;
         text-align: center;
         background-position: bottom center;
+        background-repeat: no-repeat;
+
+        @include tablet{
+            background-size: 59rem 59rem;
+            padding: 3.25rem 0 22.9375rem;
+        }
+
+        @include mid-tablet{
+            padding: 0 0 0 8.6875rem;
+            width: 50.6875rem;
+            text-align: left;
+            background-position: left -155px bottom -348px;
+        }
     }
 
     &__image{
         width: 10.75rem;
+
+        @include tablet{
+            width: 12.3125rem;
+        }
+
+        @include mid-tablet{
+            width: 23.25rem;
+            padding-top: 7.8125rem;
+            margin-bottom: -1rem;
+        }
     }
 
     &__last{
         margin-top: -7.4375rem;
         padding: 0 0 3.4375rem;
         z-index: 2;
-        position: relative;
+
+        @include tablet{
+            margin-top: -18.75rem;
+            padding: 0 0 4rem;
+        }
+
+        @include mid-tablet{
+            margin-top: 0;
+            padding: 0;
+            margin-left: -9.5rem;
+        }
     }
 
     &__title{
@@ -154,17 +188,47 @@
         line-height: 1.11111;
         text-align: center;
         color: $white-00;
+
+        @include tablet{
+            @include heading-01;
+        }
+
+        @include mid-tablet{
+            text-align: left;
+            margin: 8.3125rem 0 0;
+            width: 21.875rem;
+        }
     }
 
     &__description{
+        @include body-01;
         width: 17.5rem;
         margin: 1.5rem auto 0;
         text-align: center;
         color: $white-00;
         opacity: 0.75;
+
+        @include tablet{
+            width: 21rem;
+        }
+
+        @include mid-tablet{
+            text-align: left;
+            margin: 1.5rem 0 0;
+            width: 21.875rem;
+        }
     }
 
     &__link{
         margin: 1.5rem auto 0;
+
+        @include tablet{
+            margin-top: 2.5rem;
+        }
+
+        @include mid-tablet{
+            text-align: left;
+            margin: 2.5rem 0 0;
+        }
     }
 }
