finish desing of zx7 on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -84,5 +84,20 @@ button{
 
     &--black{
         background-color: $black-00;
+
+        &:hover{
+            background-color: #4C4C4C;
+        }
+    }
+
+    &--transparent{
+        background-color: transparent;
+        border: 1px solid $black-00;
+        color: $black-00;
+
+        &:hover{
+            background-color: $black-00;
+            color: $white-00;
+        }
     }
 }
