--- a/src/ui/hook/hook.module.scss
+++ b/src/ui/hook/hook.module.scss
@@ -2,15 +2,18 @@
 @use "../../styles/variables" as *;
 
 .hook{
+    margin-top: 7.5rem;
 
     @include tablet{
         width: 43.0625rem;
+        margin-top: 6rem;
     }
 
     @include mid-tablet{
         width: 69.375rem;
         display: flex;
         justify-content: space-between;
+        margin-top: 12.5rem;
     }
 
     &__last{
