--- a/src/app/earphones/page.module.scss
+++ b/src/app/earphones/page.module.scss
@@ -1,2 +1,10 @@
 @use "../../styles/mixin" as *;
 @use "../../styles/variables" as *;
+
+.earphones{
+    padding-bottom: 7.5rem;
+
+    @include mid-tablet{
+        padding-bottom: 10rem;
+    }
+}
