--- a/src/app/headphones/page.module.scss
+++ b/src/app/headphones/page.module.scss
@@ -7,4 +7,12 @@
     @include mid-tablet{
         padding-bottom: 10rem;
     }
+
+    &__subnav{
+        margin-top: 10.75rem;
+
+        @include mid-tablet{
+            margin-top: 15rem;
+        }
+    }
 }
