--- a/src/ui/cart-toggle/cart-toggle.module.scss
+++ b/src/ui/cart-toggle/cart-toggle.module.scss
@@ -11,6 +11,7 @@
         left: 0;
         top: 100%;
         display: none;
+        padding: 1.5rem 0 0 1.5rem;
     
         &--show{
             display: block;
@@ -22,5 +23,13 @@
         &:hover{
             cursor: pointer;
         }
+    }
+
+    &__container{
+        padding: 2rem 1.5rem;
+        background-color: $white-00;
+        border-radius: 0.5rem;
+        margin: 0 1.75rem 0 auto;
+        max-width: 23.5625rem;
     }
 }
