--- a/src/ui/cart-toggle/cart-toggle.module.scss
+++ b/src/ui/cart-toggle/cart-toggle.module.scss
@@ -12,6 +12,7 @@
         top: 100%;
         display: none;
         padding: 1.5rem 0 0 1.5rem;
+        z-index: 5;
     
         &--show{
             display: block;
